change the initial position to a class with more properties instead of just enum (#26435)